# orderflow-be

./: .gitignore  README.md  main.py  pyproject.toml
app/config/: database.py
app/dbs/allergen/: mgmt.py  model.py
app/dbs/category/: mgmt.py
app/dbs/customization_choice/: mgmt.py
app/dbs/customization_option/: mgmt.py  model.py
app/dbs/ingredient/: mgmt.py  model.py
app/dbs/inventory_transaction/: mgmt.py
app/dbs/menu_item/: mgmt.py
app/dbs/menu_item_allergen/: mgmt.py
app/dbs/menu_item_recipe/: mgmt.py
app/dbs/order/: mgmt.py
app/dbs/order_customization/: mgmt.py
app/dbs/order_item/: mgmt.py
app/dbs/qr_session/: mgmt.py  model.py
app/dbs/restaurant/: mgmt.py
app/dbs/table/: mgmt.py  model.py
app/models/: __init__.py  base.py  category.py  customization_choice.py  inventory_transaction.py  menu_item.py  menu_item_allergen.py  menu_item_recipe.py  order.py  order_customization.py  order_item.py  restaurant.py
app/routers/v1/: __init__.py
app/routers/v1/restaurant/: __init__.py  endpoints.py  schemas.py
app/services/: restaurant_service.py
